@@ -13,6 +13,8 @@ New Features
 
 - Added tenants allowed on SubscreensItem entity and subscreens-item
   element, makes more sense to filter apps by tenant than in screen
+- Added SubscreensDefault entity and supporting code to override default
+  subscreens by tenant and/or condition with database records
 
 Bug Fixes
 
